--- a/music_controller/frontend/package.json
+++ b/music_controller/frontend/package.json
@@ -9,20 +9,22 @@
   "keywords": [],
   "author": "Fabio DC <fabiodiceglie@icloud.com> (http://fabiodiceglie.com/)",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "@babel/core": "7.20.12",
-    "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
+    "babel-loader": "9.1.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "webpack": "5.75.0",
+    "webpack-cli": "5.0.1"
+  },
+  "dependencies": {
+    "@babel/plugin-proposal-class-properties": "7.18.6",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "@mui/icons-material": "5.11.0",
     "@mui/material": "5.11.4",
-    "babel-loader": "9.1.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-router-dom": "6.6.2",
-    "webpack": "5.75.0",
-    "webpack-cli": "5.0.1"
+    "react-router-dom": "6.6.2"
   }
 }
