--- a/music_controller/frontend/package.json
+++ b/music_controller/frontend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --mode development --watch",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "Fabio DC <fabiodiceglie@icloud.com> (http://fabiodiceglie.com/)",
@@ -13,6 +14,11 @@
     "@babel/core": "7.20.12",
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
+    "@types/jest": "29.2.5",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
+    "typescript": "4.9.4",
     "babel-loader": "9.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
