chore: add cookies provider

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "^18.2.0",
+    "react-cookie": "4.1.1",
     "react-dom": "^18.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
