--- a/django_backend_graphene/requirements.txt
+++ b/django_backend_graphene/requirements.txt
@@ -1,102 +1,17 @@
-altgraph==0.17.3
 aniso8601==9.0.1
-anyio==3.6.2
-appnope==0.1.3
-ariadne==0.17.1
 asgiref==3.6.0
-asttokens==2.1.0
-attrs==22.1.0
-Babel==2.10.3
-backcall==0.2.0
-beautifulsoup4==4.10.0
-bokeh==3.0.2
-certifi==2022.9.24
-charset-normalizer==2.1.1
-click==8.1.3
-contourpy==1.0.6
-decorator==5.1.1
-diagrams==0.20.0
 Django==4.1.5
 django-cors-headers==3.13.0
 django-environ==0.9.0
 djangorestframework==3.14.0
-et-xmlfile==1.1.0
-exceptiongroup==1.0.4
-executing==1.2.0
-Flask==2.2.2
-Flask-Cors==3.0.10
-Flask-SQLAlchemy==3.0.2
-ghp-import==2.1.0
-gitdb==4.0.9
-GitPython==3.1.28
+environ==1.0
 graphene==3.2.1
 graphene-django==3.0.0
 graphql-core==3.2.3
 graphql-relay==3.2.0
-graphviz==0.16
-h11==0.14.0
-idna==3.4
-importlib-metadata==5.0.0
-iniconfig==1.1.1
-ipython==8.6.0
-itsdangerous==2.1.2
-jedi==0.18.1
-Jinja2==3.1.2
-lxml==4.9.1
-macholib==1.16.2
-Markdown==3.4.1
-MarkupSafe==2.1.2
-matplotlib-inline==0.1.6
-mergedeep==1.3.4
-mkdocs==1.2.3
-mkdocs-git-revision-date-localized-plugin==0.12.1
-mkdocs-material==7.3.4
-mkdocs-material-extensions==1.0.3
-mkdocs-mermaid-plugin==0.1.1
-numpy==1.23.4
-openpyxl==3.0.10
-packaging==21.3
-pandas==1.5.1
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.3.0
-pluggy==1.0.0
 promise==2.3
-prompt-toolkit==3.0.32
 psycopg2-binary==2.9.5
-ptyprocess==0.7.0
-pure-eval==0.2.2
-Pygments==2.13.0
-pyinstaller==5.6.2
-pyinstaller-hooks-contrib==2022.12
-pymarkdownlint==0.3.1
-pymdown-extensions==9.0
-pyparsing==3.0.9
-pytest==7.2.0
-python-dateutil==2.8.2
-pytz==2022.4
-PyYAML==6.0
-pyyaml_env_tag==0.1
-requests==2.28.1
+pytz==2022.7.1
 six==1.16.0
-smmap==5.0.0
-sniffio==1.3.0
-soupsieve==2.3.2.post1
-SQLAlchemy==1.4.44
 sqlparse==0.4.3
-stack-data==0.6.0
-starlette==0.23.1
 text-unidecode==1.3
-tomli==2.0.1
-tornado==6.2
-traitlets==5.5.0
-typing_extensions==4.4.0
-urllib3==1.26.12
-uvicorn==0.20.0
-watchdog==2.1.9
-wcwidth==0.2.5
-Werkzeug==2.2.2
-xlrd==2.0.1
-xyzservices==2022.9.0
-zipp==3.9.0
