chore: added gunicorn

--- a/django_backend_graphene/requirements.txt
+++ b/django_backend_graphene/requirements.txt
@@ -1,6 +1,6 @@
 aniso8601==9.0.1
 asgiref==3.6.0
-Django
+Django==4.1.5
 django-cors-headers==3.13.0
 django-environ==0.9.0
 djangorestframework==3.14.0
@@ -9,6 +9,7 @@ graphene==3.2.1
 graphene-django==3.0.0
 graphql-core==3.2.3
 graphql-relay==3.2.0
+gunicorn==20.1.0
 promise==2.3
 psycopg2-binary==2.9.5
 pytz==2022.7.1
