--- a/django_backend_graphene/requirements.txt
+++ b/django_backend_graphene/requirements.txt
@@ -1,5 +1,6 @@
 aniso8601==9.0.1
 asgiref==3.6.0
+Brotli==1.0.9
 Django==4.1.5
 django-cors-headers==3.13.0
 django-environ==0.9.0
@@ -16,3 +17,4 @@ pytz==2022.7.1
 six==1.16.0
 sqlparse==0.4.3
 text-unidecode==1.3
+whitenoise==6.3.0
